--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 									<a class="nav-link" href="about.html">About Us</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">Projects</a>
+									<a class="nav-link" href="projects.html">Projects</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="contact.html">Contact Us</a>
