--- a/contact.html
+++ b/contact.html
@@ -39,16 +39,16 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
 								<li class="nav-item">
-									<a class="nav-link" href="#">Home</a>
+									<a class="nav-link" href="index.html">Home</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">About Us</a>
+									<a class="nav-link" href="about.html">About Us</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">Projects</a>
+									<a class="nav-link" href="projects.html">Projects</a>
 								</li>
 								<li class="nav-item active">
-									<a class="nav-link" href="#">Contact Us</a>
+									<a class="nav-link" href="contact.html">Contact Us</a>
 								</li>
 							</ul>
 						</div>
