mobile version complete

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 					<!-- Category Nav -->
 					<div class="cat-nav">
 						<div class="row">
-							<div class="col-lg-2">
+							<div class="col-4 col-lg-2">
 								<a href="#">
 									<div class="thumb-wrppaer active">
 										<img src="assets/images/cat1.jpg" alt="Category" class="img-fluid">
@@ -77,7 +77,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="col-lg-2">
+							<div class="col-4 col-lg-2">
 								<a href="#">
 									<div class="thumb-wrppaer">
 										<img src="assets/images/cat2.jpg" alt="Category" class="img-fluid">
@@ -87,7 +87,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="col-lg-2">
+							<div class="col-4 col-lg-2">
 								<a href="#">
 									<div class="thumb-wrppaer">
 										<img src="assets/images/cat3.jpg" alt="Category" class="img-fluid">
@@ -97,7 +97,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="col-lg-2">
+							<div class="col-4 col-lg-2">
 								<a href="#">
 									<div class="thumb-wrppaer">
 										<img src="assets/images/cat4.jpg" alt="Category" class="img-fluid">
@@ -107,7 +107,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="col-lg-2">
+							<div class="col-4 col-lg-2">
 								<a href="#">
 									<div class="thumb-wrppaer">
 										<img src="assets/images/cat5.jpg" alt="Category" class="img-fluid">
@@ -117,7 +117,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="col-lg-2">
+							<div class="col-4 col-lg-2">
 								<a href="#">
 									<div class="thumb-wrppaer">
 										<img src="assets/images/cat6.jpg" alt="Category" class="img-fluid">
@@ -139,22 +139,22 @@
 										<img src="assets/images/slider.jpg" alt="Slider" class="img-fluid img-area">
 									</div>
 									<div class="row">
-										<div class="col-lg-3">
+										<div class="col-3 col-lg-3">
 											<div class="gallery-thumb">
 												<img src="assets/images/cat1.jpg" alt="Slider" class="img-fluid" data-src="assets/images/slider.jpg">
 											</div>
 										</div>
-										<div class="col-lg-3">
+										<div class="col-3 col-lg-3">
 											<div class="gallery-thumb">
 												<img src="assets/images/cat2.jpg" alt="Slider" class="img-fluid" data-src="assets/images/cat2.jpg">
 											</div>
 										</div>
-										<div class="col-lg-3">
+										<div class="col-3 col-lg-3">
 											<div class="gallery-thumb">
 												<img src="assets/images/cat3.jpg" alt="Slider" class="img-fluid" data-src="assets/images/cat3.jpg">
 											</div>
 										</div>
-										<div class="col-lg-3">
+										<div class="col-3 col-lg-3">
 											<div class="gallery-thumb">
 												<img src="assets/images/cat4.jpg" alt="Slider" class="img-fluid" data-src="assets/images/cat4.jpg">
 											</div>
