--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2 offset-lg-5">
-					<div class="logo-wrapper">
-						<img src="assets/images/logo.png" alt="Logo" class="img-fluid">
-					</div>
+					<a href="#">
+						<div class="logo-wrapper">
+							<img src="assets/images/logo.png" alt="Logo" class="img-fluid">
+						</div>
+					</a>
 				</div>
 				<div class="col-lg-12">
 					<nav class="navbar navbar-expand-lg navbar-light ">
